--- a/sistema_config/sistemaEducacion/Templates/Administrador/dashboard.html
+++ b/sistema_config/sistemaEducacion/Templates/Administrador/dashboard.html
@@ -39,7 +39,7 @@
                     style="text-decoration: none; color: black; " href="{% url 'dashboards' %}">Dashboards</a></li>
         </ul>
     </div>
-    <iframe title="PBI_Colegio" width="1519" height="700" src="https://app.powerbi.com/reportEmbed?reportId=ce21e42a-218c-4afd-932e-a17d90213e06&autoAuth=true&ctid=72fd0b5a-8a6a-4cff-89f6-bde961f7e250" frameborder="0" allowFullScreen="true"></iframe>
+    <iframe title="PBI_Colegio (1)" width="1500" height="800" src="https://app.powerbi.com/reportEmbed?reportId=32bd2994-6624-4b7a-bd12-e5d04adb9229&autoAuth=true&ctid=72fd0b5a-8a6a-4cff-89f6-bde961f7e250" frameborder="0" allowFullScreen="true"></iframe>
 </div>
 
 {% endblock %}
