--- a/sistema_config/sistemaEducacion/Templates/base.html
+++ b/sistema_config/sistemaEducacion/Templates/base.html
@@ -20,6 +20,10 @@
   <script src="https://cdnjs.cloudflare.com/ajax/libs/popper.js/1.16.0/umd/popper.min.js"></script>
   <script src="https://maxcdn.bootstrapcdn.com/bootstrap/4.5.2/js/bootstrap.min.js"></script>
   <script src="https://cdnjs.cloudflare.com/ajax/libs/fullcalendar/5.10.1/main.min.js"></script>
+  <script src="https://cdnjs.cloudflare.com/ajax/libs/jspdf/1.3.4/jspdf.min.js"></script>
+  <script src="https://cdnjs.cloudflare.com/ajax/libs/jspdf/1.3.2/jspdf.debug.js"></script>
+
+
   <script src="https://cdn.jsdelivr.net/npm/sweetalert2@11"></script>
 
   <link rel="icon" href="{% static 'img/educacion.png' %}">
@@ -47,7 +51,7 @@
             <li class="nav-item">
               <a class="nav-link active" aria-current="page" href="{% url 'index' %}" style="font-size: x-large;">Inicio</a>
             </li>
-            {% if is_login_successful %}
+            {% if user.is_authenticated %}
             <li class="nav-item">
               <a class="nav-link" href="{% url 'sistema_Profe' %}" style="font-size: x-large;">Profesor</a>
             </li>
@@ -58,7 +62,7 @@
               <a class="nav-link" href="{% url 'admin_apoderado' %}" style="font-size: x-large;">Administracion</a>
             </li>
             <li class="nav-item">
-              <a class="nav-link" href="{% url 'index' %}" style="font-size: x-large;">Cerrar Sesión</a>
+              <a class="nav-link" href="{% url 'cerrar_sesion' %}" style="font-size: x-large;">Cerrar Sesión</a>
             </li>
             {% else %}
             <li class="nav-item">
