--- a/sistema_config/sistemaEducacion/Templates/index.html
+++ b/sistema_config/sistemaEducacion/Templates/index.html
@@ -26,7 +26,7 @@
     <div class="row row-cols-1 row-cols-md-3 g-5 eventos">
         {% for e in eventos %}
         <div class="col">
-            <div class="card h-100">
+            <div class="card card_ex h-100">
                 <img src="data:imagen/jpeg;base64,{{ e.imagen }}" class="card-img-top" alt="..." height="350"
                     style="border-radius: 15px;">
                     <div style="position: absolute; top: 0; right: 0; width: 100%; height: 100%; background-color: rgba(37, 37, 37, 0.7); padding: 20px; border-radius: 10px;">
