--- a/sistema_config/sistemaEducacion/Templates/Profesor/notificar.html
+++ b/sistema_config/sistemaEducacion/Templates/Profesor/notificar.html
@@ -7,18 +7,26 @@
     <a type="button" class="btn btn-secondary" href="{% url 'sistema_Profe' %}" style="background-color: rgb(15,48,74);box-shadow: inset 0 0 5px rgba(0, 0, 0, 0.5);">Volver  ←</a>
     <div class="col-md" style="margin-left: 2%; margin-right: 2%;">
         <h2 style="text-align: center; margin-bottom: 6%; margin-top: 5%;">Formulario de Reunión</h2>
-        <form class="formularioReunion">
+        <form class="formularioReunion"  method="post" >
+            {% csrf_token %}
             <div class="mb-3">
-                <input type="date" class="form-control" id="fecha" required style="box-shadow: inset 0 0 5px rgba(0, 0, 0, 0.5);margin: 3%;"placeholder="Fecha de Reunion">
+                <input type="date" class="form-control" id="fecha" name="fecha" required style="box-shadow: inset 0 0 5px rgba(0, 0, 0, 0.5);margin: 3%;"placeholder="Fecha de Reunion">
             </div>
             <div class="mb-3">
-                <input class="form-control " id="exampleFormControlTextarea1" rows="3"style="box-shadow: inset 0 0 5px rgba(0, 0, 0, 0.5);margin: 3%;"placeholder="Asunto del Mensaje"></input>
+                <input class="form-control " id="asunto" name="asunto" rows="3"style="box-shadow: inset 0 0 5px rgba(0, 0, 0, 0.5);margin: 3%;"placeholder="Asunto del Mensaje"></input>
             </div>
             <div class="mb-3">
-                <textarea class="form-control " id="exampleFormControlTextarea1" rows="7"style="box-shadow: inset 0 0 5px rgba(0, 0, 0, 0.5);margin: 3%;" placeholder="Cuerpo del Mensaje"></textarea>
+                <textarea class="form-control " id="cuerpo" name="cuerpo" rows="7"style="box-shadow: inset 0 0 5px rgba(0, 0, 0, 0.5);margin: 3%;" placeholder="Cuerpo del Mensaje"></textarea>
             </div>
-
-            <button type="submit" class="btn btn-primary" style="margin: 2%;">Notificar</button>
+            <div class="mb3" style="margin-bottom: 2%;">
+                <select name="profe_id" id="profe_id" class="form-select" style="box-shadow: inset 0 0 5px rgba(0, 0, 0, 0.5) ;margin: 3%;">
+                  <option value="">Selecccione...</option>
+                  {% for p in profesores %}
+                  <option value="{{p.0}}">{{p.1}}</option>
+                  {% endfor %}
+                </select>
+              </div>
+            <button type="submit"  class="btn btn-primary" style="margin: 2%;">Notificar</button>
         </form>
     </div>
     <div class="col-md">
